build: Updating browserslist to 4.16.6
* https://npmjs.com/advisories/1747 (CVE-2021-23364)

Additional changes:
* Updated composer IRC support URL to use Libera Chat (T283273)

Change-Id: I85e9f5a40e3dd0437dec9b46c05d4d98c5c7cbe7

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	},
 	"support": {
 		"issues": "https://phabricator.wikimedia.org/",
-		"irc": "irc://irc.freenode.net/wikimedia-discovery"
+		"irc": "irc://irc.libera.chat/wikimedia-discovery"
 	},
 	"require-dev": {
 		"mediawiki/mediawiki-codesniffer": "35.0.0",
